--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,3 +3,7 @@ __pycache__/
 .venv/
 .env
 .runlogs/
+
+# Generated on demand from uv.lock (single source of truth is pyproject.toml + uv.lock).
+requirements.txt
+requirements-dev.txt
