--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ name = "openclaw-agency-backend"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
-  "fastapi==0.115.4",
+  "fastapi==0.128.0",
   "uvicorn[standard]==0.30.6",
   "sqlmodel==0.0.22",
   "sqlalchemy==2.0.34",
@@ -25,7 +25,8 @@ dependencies = [
   "redis==5.1.1",
   "fastapi-clerk-auth==0.0.9",
   "sse-starlette==2.1.3",
-  "jinja2"
+  "jinja2==3.1.6",
+  "fastapi-pagination==0.15.9",
 ]
 
 [project.optional-dependencies]
