fix(e2e): force IPv4 + 127.0.0.1 baseUrl to avoid localhost ::1 proxy hangups

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,10 @@ jobs:
       - name: Run Cypress E2E
         env:
           NEXT_TELEMETRY_DISABLED: "1"
-          # Cypress exposes env vars prefixed with CYPRESS_ via Cypress.env().
+          # Prefer IPv4 to avoid localhost -> ::1 issues when Next binds only to 127.0.0.1.
+          NODE_OPTIONS: "--dns-result-order=ipv4first"
+          # Force Cypress to use 127.0.0.1 as baseUrl (Cypress only auto-loads CYPRESS_* into Cypress.env()).
+          CYPRESS_baseUrl: "http://127.0.0.1:3000"
           # Vars for shared Clerk OTP helper (frontend/cypress/support/commands.ts)
           CYPRESS_CLERK_ORIGIN: ${{ vars.CYPRESS_CLERK_ORIGIN }}
           CYPRESS_CLERK_TEST_EMAIL: ${{ vars.CYPRESS_CLERK_TEST_EMAIL }}
