--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -7,6 +7,10 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 # - local: shared bearer token entered in UI
 NEXT_PUBLIC_AUTH_MODE=local
 
+# Set to true to disable full-page reload on org switch (storage/BroadcastChannel).
+# Use when debugging unexpected periodic reloads; if reloads stop, the cause was org-switch sync.
+# NEXT_PUBLIC_DISABLE_ORG_SWITCH_RELOAD=false
+
 # Clerk auth (used when NEXT_PUBLIC_AUTH_MODE=clerk)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/boards
