--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,3 +25,5 @@ RQ_QUEUE_NAME=default
 RQ_DISPATCH_THROTTLE_SECONDS=15.0
 RQ_DISPATCH_MAX_RETRIES=3
 GATEWAY_MIN_VERSION=2026.02.9
+# OpenClaw config directory for Core Directory feature (default: ~/.openclaw)
+# OPENCLAW_CONFIG_DIR=~/.openclaw
